8277843: [Vector API] scalar2vector shouldn't be used for mask operations if Op_MaskAll is unavailable